<resources>
    <string name="app_name">ExamplesProject</string>

    <!--bottomsheet-->
    <string name="BackDropBottomSheetBehavior">br.com.examples.caique.examplesproject.view.bottomsheet.BackdropBottomSheetBehavior</string>
    <string name="BottomSheetBehaviorGoogleMapsLike">br.com.examples.caique.examplesproject.view.bottomsheet.BottomSheetBehaviorGoogleMapsLike</string>
    <string name="ScrollAwareFABBehavior">br.com.examples.caique.examplesproject.view.bottomsheet.ScrollAwareFABBehavior</string>
    <string name="MergedAppBarLayoutBehavior">br.com.examples.caique.examplesproject.view.bottomsheet.MergedAppBarLayoutBehavior</string>
    <string name="ScrollingAppBarLayoutBehavior">br.com.examples.caique.examplesproject.view.bottomsheet.ScrollingAppBarLayoutBehavior</string>
    <!--bottomsheet/-->

    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_data_binding">DataBinding</string>
    <string name="title_activity_list">Simple List</string>
    <string name="title_activity_list_bottom">Simple List With Bottom</string>
    <string name="title_activity_list_filter">Simples List With Filter</string>
    <string name="title_activity_endless_scroller">Endless Scroller</string>
    <string name="title_activity_endless_scroller_filter">Endless Scroller With Filter</string>
    <string name="title_activity_expandable_list">Expandable List</string>
    <string name="title_activity_expandable_endless_list">Expandable Endless List</string>
    <string name="title_activity_header_list">Header List</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_grid_list">Grid List</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
